Ranjani wanted a convergence threshold

--- a/FIND.ipynb
+++ b/FIND.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,15 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 27/27 [01:17<00:00,  2.87s/it]\n",
-      "100%|█████████████████████████████████████████████| 4/4 [00:03<00:00,  1.07it/s]\n",
+      "100%|███████████████████████████████████████████| 27/27 [01:08<00:00,  2.53s/it]\n",
+      "100%|█████████████████████████████████████████████| 4/4 [00:03<00:00,  1.20it/s]\n",
       "  0%|                                                    | 0/27 [00:00<?, ?it/s]"
      ]
     },
@@ -214,43 +214,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E1         373   0.473 0.823 0.601   58    0.533 0.690 0.602\n",
-      "C          206   0.562 0.306 0.396   24    0.429 0.750 0.545\n",
-      "E2         123   0.089 0.041 0.056   17      nan 0.000   nan\n",
+      "E1         373   0.934 0.981 0.957   58    0.892 1.000 0.943\n",
+      "C          206   0.451 1.000 0.621   24    0.490 1.000 0.658\n",
+      "E2         123     nan 0.000   nan   17    1.000 0.176 0.300\n",
       "A          47      nan 0.000   nan   6       nan 0.000   nan\n",
       "E4         41      nan 0.000   nan   3       nan 0.000   nan\n",
-      "B          33    0.000 0.000   nan   1       nan 0.000   nan\n",
+      "B          33      nan 0.000   nan   1       nan 0.000   nan\n",
       "E3         26      nan 0.000   nan   8       nan 0.000   nan\n",
-      "Epoch: 0  Train Loss:  45.7304  Acc: 44.17  Val  Loss   5.8410  Acc: 49.57\n"
+      "Epoch: 0  Train Loss:  22.4375  Acc: 67.37  Val  Loss   2.6101  Acc: 72.65\n",
+      "4.45682678866838e+98\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 27/27 [01:11<00:00,  2.66s/it]\n",
-      "100%|█████████████████████████████████████████████| 4/4 [00:03<00:00,  1.03it/s]"
+      "100%|███████████████████████████████████████████| 27/27 [01:05<00:00,  2.44s/it]\n",
+      "100%|█████████████████████████████████████████████| 4/4 [00:03<00:00,  1.19it/s]\n",
+      "  0%|                                                    | 0/27 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E1         373   0.434 0.491 0.460   58    0.496 1.000 0.663\n",
-      "C          206   0.293 0.607 0.395   24      nan 0.000   nan\n",
-      "E2         123     nan 0.000   nan   17      nan 0.000   nan\n",
-      "A          47      nan 0.000   nan   6       nan 0.000   nan\n",
-      "E4         41      nan 0.000   nan   3       nan 0.000   nan\n",
-      "B          33      nan 0.000   nan   1       nan 0.000   nan\n",
-      "E3         26      nan 0.000   nan   8       nan 0.000   nan\n",
-      "Epoch: 1  Train Loss:  41.3035  Acc: 36.28  Val  Loss   5.2298  Acc: 49.57\n"
+      "Epoch: 1  Train Loss:  18.6007  Acc: 74.91  Val  Loss   3.2592  Acc: 69.23\n",
+      "0.20627058028981451\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "100%|███████████████████████████████████████████| 27/27 [01:04<00:00,  2.39s/it]\n",
+      "100%|█████████████████████████████████████████████| 4/4 [00:03<00:00,  1.17it/s]\n",
+      "  0%|                                                    | 0/27 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 2  Train Loss:  16.3406  Acc: 79.51  Val  Loss   2.3906  Acc: 84.62\n",
+      "0.13830987503139336\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|███▎                                        | 2/27 [00:07<01:35,  3.82s/it]"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-3d7c80545ac7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mce_loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0mtotal_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mce_loss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Library/Python/3.7/lib/python/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m     91\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m         \"\"\"\n\u001b[0;32m---> 93\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Library/Python/3.7/lib/python/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     88\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     89\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -259,6 +285,7 @@
     "##    Training Loop\n",
     "###############################################################################\n",
     "prev_acc = 0\n",
+    "prev_loss = 1e100\n",
     "for epoch in range(0, config.epochs + 1):\n",
     "\n",
     "    batches = []\n",
@@ -312,6 +339,11 @@
     "        prev_acc = val_acc\n",
     "        pref = config.name\n",
     "        torch.save(net, \"{}.model\".format(run_name))\n",
+    "    \n",
+    "    if abs(prev_loss - total_loss)/total_loss < 0.01:\n",
+    "        print(\"Converged\")\n",
+    "        break\n",
+    "    prev_loss = total_loss\n",
     "\n",
     "out = torch.cat((net.embedding.weight.data, torch.ones(len(acids), 1).to(device)), 1)"
    ]
